# PerfInstr

./: .gitignore  CMakeLists.txt  README.md  README_RVBENCH.md  perf-clang  perf-clang++  perf-clang++.in  perf-clang.in  perf-convert.py  perf-data.py  perf-instr.py  perfRT.py  perf_bbl.py  perf_data.py  perf_dump.py  perf_func.py  perflib.py  rvbench_score.fish  rvbench_summarize.py  rvbench_test.py  rvbench_test_star.py  verify_conformity.py
Pass/: CMakeLists.txt  PerfInstrPass.cpp  PerfInstrPass.h  SqliteDebugWriter.cpp  SqliteDebugWriter.h
TraceRecorder/: CMakeLists.txt  SqliteDebugWriter.cpp  SqliteDebugWriter.h  TraceRecorder.cpp
compiler-rt/cmake/: config-ix.cmake
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/trec/: CMakeLists.txt
compiler-rt/lib/trec/rtl/: trec.syms.extra  trec_defs.h  trec_flags.inc  trec_interface.cpp  trec_interface.h  trec_interface_inl.h  trec_rtl.cpp  trec_rtl.h  trec_rtl_proc.cpp  trec_rtl_thread.cpp
perfRT/: CMakeLists.txt  perfRT.cpp
skeleton/: CMakeLists.txt
templates/: bbl_report.html  index.html  report.html  report_new.html
